# opendata

./: .editorconfig  .gitignore  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: index.html
app/src/: App.tsx  main.tsx
app/src/components/: EstablishmentDetails.tsx  EstablishmentMap.tsx  InfoOverlay.tsx
app/src/hooks/: api.ts
src/: api.rs  fetch_data.rs  main.rs  sql.rs
