[package]
name = "palachias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
clap = { version = "4.5.3", features = ["derive", "env"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
