[package]
name = "palachias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["macros"] }
clap = { version = "4.5.3", features = ["derive", "env"] }
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net" ] }
tower-http = { version = "0.5.2", features = ["cors"] }
